--- a/hello-world-node/package.json
+++ b/hello-world-node/package.json
@@ -45,3 +45,8 @@
     "typescript": "~3.5.3"
   }
 }
+{
+  "scripts": {
+    "build": "export NODE_OPTIONS=--openssl-legacy-provider; gatsby build"
+  }
+}
