--- a/hello-world-node/package.json
+++ b/hello-world-node/package.json
@@ -44,5 +44,12 @@
     "tslint": "~5.15.0",
     "typescript": "~3.5.3"
   }
+  
+  {
+  "scripts": {
+    "build": "export NODE_OPTIONS=--openssl-legacy-provider; gatsby build"
+  }
+}
+  
 }
 
