--- a/hello-world-node/package.json
+++ b/hello-world-node/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build": "export NODE_OPTIONS=--openssl-legacy-provider; gatsby build"
+    "build": "export NODE_OPTIONS=--openssl-legacy-provider"
   },
   "private": true,
   "dependencies": {
